Update project files

--- a/kmw-business-system_v108_neu/package.json
+++ b/kmw-business-system_v108_neu/package.json
@@ -10,7 +10,7 @@
 		"postinstall": "prisma generate"
 	},
 	"prisma": {
-		"schema": "./prisma",
+		"schema": "./prisma"
 	},
 	"dependencies": {
 		"@dnd-kit/core": "latest",
