--- a/kmw-business-system_v108_neu/package.json
+++ b/kmw-business-system_v108_neu/package.json
@@ -4,13 +4,14 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "prisma generate && next build",
+		"build": "prisma generate && prisma db push && prisma db seed && next build",
 		"start": "next start",
 		"lint": "next lint",
 		"postinstall": "prisma generate"
 	},
 	"prisma": {
-		"schema": "./prisma"
+		"schema": "./prisma",
+		"seed": "ts-node prisma/seed.ts"
 	},
 	"dependencies": {
 		"@dnd-kit/core": "latest",
